# jumpgame

./: Cargo.toml  README.md
assets/: cat4-resample-no-animation.glb  cat4-resample.glb  floor.blend  floor.blend1  floor.glb
src/: animation.rs  main.rs
web/: index.html  jumpgame.d.ts  jumpgame.js  jumpgame_bg.wasm.d.ts
