[package]
name = "jumpgame"
version = "0.1.0"
edition = "2021"

[dependencies]
avian3d = "0.1.0"
bevy = "0.14.0"
bevy-inspector-egui = "0.24.0"
bevy-tnua = "0.19.0"
bevy-tnua-xpbd3d = "0.5.0"
bevy_wind_waker_shader = "0.1.2"
bevy_xpbd_3d = "0.5.0"

[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
